stuf/src/p3/tests/t076.err
Semantic error on line 1: Incorrect type (double) for initial value of variable 'a' of type (int).
Semantic error on line 2: Incorrect type (double) for initial value of variable 'b' of type (int).
Semantic error on line 3: Invalid right operand for operator 'cos'.
Semantic error on line 4: Invalid right operand for operator 'cos'.
Semantic error on line 5: Invalid right operand for operator 'cos'.
