stuf/src/p3/tests/t076.gpl
int a = cos( 7 );
int b = cos( 12.5 );
int c = cos( "bobbing" );
double f = cos( "bobbing" );
string i = cos( "bobbing" );
